<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luvkush.meiten.Student_account"
    android:background="@drawable/universityimage"
    >

    <Button
        android:id="@+id/btnPref"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvItemSelected"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/select_preferences"
        android:background="@drawable/rounded_btn"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:hint="@string/etname" />

    <EditText
        android:id="@+id/etenrollment"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/etname"
        android:layout_alignStart="@+id/etname"
        android:layout_below="@+id/etname"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:hint="@string/etenrollment" />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPref"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:text="@string/btnsubmit"
        android:background="@drawable/rounded_btn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etemail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etenrollment"
        android:layout_alignStart="@+id/etenrollment"
        android:layout_below="@+id/etenrollment"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:hint="@string/etemail" />

    <EditText
        android:id="@+id/etphone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etemail"
        android:layout_alignStart="@+id/etemail"
        android:layout_below="@+id/etemail"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        android:hint="@string/etphone" />

    <EditText
        android:id="@+id/etbatch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etphone"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:hint="@string/etbatch" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnsubmit"
        android:layout_alignStart="@+id/btnsubmit"
        android:layout_below="@+id/etbatch"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_btn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/upload" />

</RelativeLayout>
